# open-comm

./: .gitignore  Cargo.toml  build.rs  shell.nix
migrations/2020-09-02-194851_create_users/: down.sql  up.sql
migrations/2020-09-06-005254_create_cards/: down.sql  up.sql
src/: auth.rs  card.rs  db.rs  error.rs  guard.rs  init.sql  lib.rs  main.rs  models.rs  schema.rs  tile.rs  uninit.sql  user.rs  util.rs
static/: login.html  register.html
tests/: common.rs  test_auth.rs  test_tile.rs
web-gui/: elm.json  index.html  package-lock.json  style.css
web-gui/src/: Api.elm  Category.elm  Icon.elm  Main.elm  Page.elm  Route.elm  Session.elm
web-gui/src/Api/: Endpoint.elm
web-gui/src/Page/: AddTile.elm  Blank.elm  Home.elm  Login.elm  Logout.elm  NotFound.elm  Register.elm
web-gui/tests/: TestRoute.elm
