[package]
name = "open-comm"
version = "0.1.0"
authors = ["Gregory C. Oakes <gregoryoakes@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
jsonwebtoken = "7.2.0"
diesel = {version="1.4.5", features=["postgres"]}
rocket_contrib = {version="0.4.5", features=["diesel_postgres_pool"]}
rust-crypto = "0.2.36"
diesel_migrations = "1.4.0"
serde = {version="1.0.115", features=["derive"]}
rand = "0.7.3"
