[package]
name = "open-comm"
version = "0.1.0"
authors = ["Gregory C. Oakes <gregoryoakes@fastmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "open_comm"
path = "src/lib.rs"

[[bin]]
name = "open-comm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4.15", features=["serde"]}
jsonwebtoken = "7.2.0"
mobc = "0.5.12"
mobc-postgres = {version="0.5.0", features=["with-chrono-0_4"]}
rand = "0.7.3"
rust-crypto = "0.2.36"
serde_json = "1.0.57"
serde = {version="1.0.115", features=["derive"]}
tempfile = "3.1.0"
thiserror = "1.0.20"
tokio = {version="0.2.22", features=["macros"]}
warp = "0.2.5"
tracing = "0.1.19"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.11"

[dev-dependencies]
lazy_static = "1.4.0"
